# wedding-album

./: README.MD  behave.ini  env-sample  pyproject.toml  requirements.txt  summary.md
core/: forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_commentary_photo.py  0002_photo.py
core/templates/: base.html  home.html  login.html  photo-approvement.html  photo_detail.html  register.html  submit_photo.html
main/: settings.py  urls.py
tests/acceptance/: environment.py
tests/acceptance/features/: like_photo.feature  login.feature  logout.feature  photo_approvement.feature  photo_comment.feature  photo_reprovement.feature  register_guests.feature  submit_photo.feature  timeline.feature
tests/acceptance/helpers/: constants.py
tests/acceptance/steps/: like_photo.py  login.py  logout.py  photo_approvement.py  photo_comment.py  register_guests.py  submit_photo.py  timeline.py
wedding_album-bdd/: __init__.py  readme.md
wedding_album-bdd/features/: environment.py  register_guests.feature
wedding_album-bdd/features/steps/: register_guests.py
wedding_album-bdd/helpers/: constants.py
wedding_album-bdd/modules/: auxiliar.py
