[tool.poetry]
name = "wedding-album"
version = "0.1.0"
description = ""
authors = ["Renan Moura <rvmoura.96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
behave = "^1.2.6"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.9"
selenium = "^3.141.0"
webdriver-manager = "^3.4.2"
Faker = "^8.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
